force-app/main/default/objects/EBAttendee__c/EBAttendee__c.object-meta.xml
<CustomObject>
    <label>Eventbrite Attendee</label>
    <nameField>
        <label>Attendee Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Eventbrite Attendees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>