force-app/main/default/objects/EBAttendee__c/fields/changed__c.field-meta.xml
<CustomField>
    <fullName>changed__c</fullName>
    <description>Date and time of last change to Attendee.</description>
    <inlineHelpText>Date and time of last change to Attendee.</inlineHelpText>
    <label>Changed</label>
    <type>DateTime</type>
</CustomField>