force-app/main/default/objects/EBAttendee__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Eventbrite Attendees</relationshipLabel>
    <relationshipName>Eventbrite_Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>