force-app/main/default/objects/EBAttendee__c/fields/Contact_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Contact_Sync_Status__c</fullName>
    <label>Contact Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not synced</fullName>
                <default>true</default>
                <label>Not synced</label>
            </value>
            <value>
                <fullName>No match found</fullName>
            </value>
            <value>
                <fullName>Match found but not synced</fullName>
            </value>
            <value>
                <fullName>Duplicates found</fullName>
            </value>
            <value>
                <fullName>Synced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>