force-app/main/default/objects/EBAttendee__c/fields/created__c.field-meta.xml
<CustomField>
    <fullName>created__c</fullName>
    <description
  >Attendee creation date and time (i.e. when order was placed).</description>
    <inlineHelpText
  >Attendee creation date and time (i.e. when order was placed).</inlineHelpText>
    <label>Created</label>
    <type>DateTime</type>
</CustomField>