force-app/main/default/objects/EBAttendee__c/fields/EBEvent__c.field-meta.xml
<CustomField>
    <fullName>EBEvent__c</fullName>
    <description>Eventbrite Event</description>
    <inlineHelpText>Eventbrite Event</inlineHelpText>
    <label>Eventbrite Event</label>
    <referenceTo>EBEvent__c</referenceTo>
    <relationshipLabel>Eventbrite Attendees</relationshipLabel>
    <relationshipName>Eventbrite_Attendees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>