force-app/main/default/objects/EBAttendee__c/fields/email__c.field-meta.xml
<CustomField>
    <fullName>email__c</fullName>
    <description>Attendee email address.</description>
    <inlineHelpText>Attendee email address.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>