force-app/main/default/objects/EBAttendee__c/fields/event_id__c.field-meta.xml
<CustomField>
    <fullName>event_id__c</fullName>
    <description>Event ID of the Attendee&apos;s Event.</description>
    <inlineHelpText>Event ID of the Attendee&apos;s Event.</inlineHelpText>
    <label>Event Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>