force-app/main/default/objects/EBAttendee__c/fields/first_name__c.field-meta.xml
<CustomField>
    <fullName>first_name__c</fullName>
    <description>Attendee first name.</description>
    <inlineHelpText>Attendee first name.</inlineHelpText>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>