force-app/main/default/objects/EBAttendee__c/fields/id__c.field-meta.xml
<CustomField>
    <fullName>id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Unique Eventbrite identifier</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique Eventbrite identifier</inlineHelpText>
    <label>Attendee Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>