force-app/main/default/objects/EBAttendee__c/fields/last_name__c.field-meta.xml
<CustomField>
    <fullName>last_name__c</fullName>
    <description>Attendee last name.</description>
    <inlineHelpText>Attendee last name.</inlineHelpText>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>