force-app/main/default/objects/EBAttendee__c/fields/order_id__c.field-meta.xml
<CustomField>
    <fullName>order_id__c</fullName>
    <description
  >Order ID under which this Attendee&apos;s ticket was purchased.</description>
    <inlineHelpText
  >Order ID under which this Attendee&apos;s ticket was purchased.</inlineHelpText>
    <label>Order Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>