force-app/main/default/objects/EBAttendee__c/fields/quantity__c.field-meta.xml
<CustomField>
    <fullName>quantity__c</fullName>
    <description>Always 1.</description>
    <inlineHelpText>Always 1.</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>