force-app/main/default/objects/EBAttendee__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <description>Attendee status.</description>
    <inlineHelpText>Attendee status.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attending</fullName>
            </value>
            <value>
                <fullName>Checked In</fullName>
            </value>
            <value>
                <fullName>Not Attending</fullName>
            </value>
            <value>
                <fullName>Guests Attending</fullName>
            </value>
            <value>
                <fullName>Guests Attended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>