force-app/main/default/objects/EBAttendee__c/fields/ticket_class_id__c.field-meta.xml
<CustomField>
    <fullName>ticket_class_id__c</fullName>
    <description>Ticket Class used by Attendee when registering.</description>
    <inlineHelpText
  >Ticket Class used by Attendee when registering.</inlineHelpText>
    <label>Ticket Class Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>