force-app/main/default/objects/EBAttendee__c/fields/ticket_class_name__c.field-meta.xml
<CustomField>
    <fullName>ticket_class_name__c</fullName>
    <description
  >Name of Ticket Class used by Attendee when registering.</description>
    <inlineHelpText
  >Name of Ticket Class used by Attendee when registering.</inlineHelpText>
    <label>Ticket Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>