force-app/main/default/objects/EBAttendee__c/validationRules/CheckContactSyncStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckContactSyncStatus</fullName>
    <active>true</active>
    <errorConditionFormula
  >AND(ISBLANK(Contact__c), ISPICKVAL(Contact_Sync_Status__c, &apos;Synced&apos;))</errorConditionFormula>
    <errorDisplayField>Contact__c</errorDisplayField>
    <errorMessage
  >Contact record missing when status is &quot;Synced&quot;.</errorMessage>
</ValidationRule>