force-app/main/default/objects/EBAttendee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>created__c</columns>
    <columns>changed__c</columns>
    <columns>status__c</columns>
    <columns>ticket_class_name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>